gathering quotes, revising opening section

--- a/index.html
+++ b/index.html
@@ -12,22 +12,22 @@
     <div id="container">
 
       <h1>Quakers Inside</h1>
-      <h2>Quaker Meetings in New York State Prisons</h2>
+      <h2>Quaker Worship Groups in New York State Prisons</h2>
 
       <figure>
         <img src="images/singsing-jumbo.jpg" alt="">
         <!--figcaption>Quakers Inside</figcaption-->
       </figure>
 
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      <p>The New York Yearly Meeting includes 8 worship groups and meetings within New York State Prisons.  These meetings bring incarcerated men and women together with attenders from across the state in the spirit of fellowship and community.</p>
 
-      <p>We visit prisons, since those incarcerated are unable to join us on First Days.</p>
+      <p>Meetings take place once or twice a week, and generally include both silent worship and discussions of social and personal matters.  Many groups also undertake projects: writing minutes or articles, planning quarterly meetings, writing and sharing poetry, raps, and essays.  We support each other through personal struggles, celebrate accomplishments like the awarding of academic degrees, and help each other build solid foundations for a successful transition from prison to civilian life.</p>
 
       <p>We are looking for new regular attenders at our meetings, but we welcome those who would like to attend even once.  You do not have to personally identify as a Quaker to join us.</p>
 
       <div class="scotch-rule"></div>
 
-      <h3>Sing Sing Meeting</h3>
+      <h3>Sing Sing Worship Group</h3>
 
       <ul class="schedule">
         <li>Meeting for Worship, Sundays, 8:15am to 11am</li>
@@ -48,7 +48,7 @@
 
       <div class="scotch-rule"></div>
 
-      <h3>Otisville Meeting</h3>
+      <h3>Otisville Worship Group</h3>
 
       <p>SAME FORMAT AS ABOVE.</p>
 
