--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
 
       <p>We are looking for new regular attenders at our meetings, but we welcome those who would like to attend even once.  You do not have to personally identify as a Quaker to join us.</p>
 
+      <p>Information on individual worship groups and how to attend can be found below.  For questions on groups not found below, or any more general questions, please email quakersinside@googlegroups.com.</p>
+
       <div class="scotch-rule"></div>
 
       <h3>Sing Sing Worship Group</h3>
@@ -34,23 +36,30 @@
         <li>Meeting with a Concern for Business, Thursdays, 6pm to 8pm</li>
       </ul>
 
-      <blockquote>Testimony from one of the group members about what the meeting means to him and the importance of civilian attenders, maybe.</blockquote>
+      <figure class="quote">
+        <blockquote>I'm very impressed with the quality of worship, the sharing.  I have friends on the inside.  And they will be my friends for a very long time.</blockquote>
+        <figcaption>Norma Ellis, member of Scarsdale Meeting, attender at Sing Sing Worship Group</figcaption>
+      </figure>
 
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      <p>The Sing Sing Worship Group was formed in 19XX.  Ten to fifteen attenders gather togther most Thursdays and Sundays for silent worship, discussion, and project planning.</p>
 
-      <p>Sing Sing Correctional Facility is in Ossining, New York, 40 miles north of New York City.  Metro North's Hudson line serves Ossining Station, which is 1 mile from the prison.</p>
+      <p>Sing Sing Correctional Facility is a men's prison in Ossining, New York, 40 miles north of New York City.  Metro North's Hudson line serves Ossining Station, which is 1 mile from the prison.</p>
 
       <h4>How to Attend</h4>
 
-      <p>Application process.  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-
-      <p>To become an attender or for more information, contact <a href="mailto:someone@example.com">someone@example.com</a>.</p>
+      <p>In addition to the standard NYS Department of Corrections requirements, those wishing to attend Sing Sing Worship Group will have to _____.  For more information, please contact <a href="mailto:mpscanlon@aol.com">Matt Scanlon</a>, a member of Scarsdale Meeting and long-time member of the group.</p>
 
       <div class="scotch-rule"></div>
 
       <h3>Otisville Worship Group</h3>
 
       <p>SAME FORMAT AS ABOVE.</p>
+
+      <div class="scotch-rule"></div>
+
+      <h3>Volunteering in New York State Prisons</h3>
+
+      <p>Complete details about the NYS Department of Correction Volunteer services program can be found <a href="http://www.doccs.ny.gov/Directives/4750.pdf">here</a>.</p>
 
       <div class="scotch-rule"></div>
 
