volunteer process info

--- a/index.html
+++ b/index.html
@@ -59,7 +59,20 @@
 
       <h3>Volunteering in New York State Prisons</h3>
 
-      <p>Complete details about the NYS Department of Correction Volunteer services program can be found <a href="http://www.doccs.ny.gov/Directives/4750.pdf">here</a>.</p>
+      <p>Under normal circumstance, the minimum age for a volunteer is 21.  Please note that volunteers are also prohibited from corresponding, visiting (with the exception of during volunteer activities), or accepting telephone calls from inmates at any DOCCS facility unless they receive permission.</p>
+
+      <p>Before first attending a meeting, you will have to apply for "Occassional Volunteer" status with the New York State Department of Corrections &amp; Community Supervision.  This will allow you to attend up to six times in a given year.  Fill out the <a href="http://www.doccs.ny.gov/directives/MFVS3080.pdf">Volunteer
+Registration Form (MFVS3080)</a>, parts I and II, and send it to the contact person listed above for the group you'd like to attend.</p>
+
+      <p>As part of your application process, the Department’s Employee Investigation Unit will perform a criminal background check.  You must also be skin tested for TB; this test may be performed by your own physician.</p>
+
+      <p>Once you have been approved as an Occassional Volunteer, you may begin attending meetings.  Co-ordinate your first visit with the contact person for your group.  Occassional Volunteers must arrange for a pass ("gate clearance") with the prison's volunteer co-ordinator before each visit; we recommend submitting your request about a week before you plan to visit.</p>
+
+      <p>If you decide to become a regular attender, you can apply for Regular/On-going Volunteer status.  This will allow you to attend as many scheduled worship group meetings as you like, and you will not be required to arrange gate clearance before visiting.</p>
+
+      <p>Applicants for Regular/On-going Volunteer status will need to attend an orientation session at the prison, and be fingerprinted.  Once your application has been approved, you will be issued an official ID card to be kept on file at the prison gate.</p>
+
+      <p>Complete details about the NYS DOCCS Volunteer Services Program can be found <a href="http://www.doccs.ny.gov/Directives/4750.pdf">here</a>.  A list of requirements for each type of volunteer is <a href="http://www.doccs.ny.gov/directives/4750B.pdf">here</a>.</p>
 
       <div class="scotch-rule"></div>
 
