more on sing sing and volunteer process.

--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
         <figcaption>Norma Ellis, member of Scarsdale Meeting, attender at Sing Sing Worship Group</figcaption>
       </figure>
 
-      <p>The Sing Sing Worship Group was formed in 19XX.  Ten to fifteen attenders gather togther most Thursdays and Sundays for silent worship, discussion, and project planning.</p>
+      <p>The Sing Sing Worship Group was formed in 19XX.  Ten to fifteen attenders gather togther most Thursdays and Sundays for silent worship, discussion, and project planning.  Some of the men have been members of the group for years; some will be visiting for the first time at a friend's urging.  New visitors from the prison or civilian population are always welcomed in warmly.</p>
+
+      <p>Our discussions range over many topics, but frequently concern spiritual growth, what it is to be and become "a man", healing from past struggles and traumas, and bringing our hard-won insights and the best of ourselves back to our communities outside the prison walls.</p>
 
       <p>Sing Sing Correctional Facility is a men's prison in Ossining, New York, 40 miles north of New York City.  Metro North's Hudson line serves Ossining Station, which is 1 mile from the prison.</p>
 
@@ -59,7 +61,9 @@
 
       <h3>Volunteering in New York State Prisons</h3>
 
-      <p>Under normal circumstance, the minimum age for a volunteer is 21.  Please note that volunteers are also prohibited from corresponding, visiting (with the exception of during volunteer activities), or accepting telephone calls from inmates at any DOCCS facility unless they receive permission.</p>
+      <p>Getting approval from the New York State Department of Corrections &amp; Community Supervision to attend our meetings can take a month or more, but it's worth the time and effort.  If you have any concerns about the process outlined below, don't hestitate to contact us at quakersinside@googlegroups.com for more information.</p>
+
+      <p>Under normal circumstance, the minimum age for a volunteer is 21.  Please note that volunteers are prohibited from corresponding, visiting (with the exception of during volunteer activities), or accepting telephone calls from inmates at any DOCCS facility unless they receive permission.</p>
 
       <p>Before first attending a meeting, you will have to apply for "Occassional Volunteer" status with the New York State Department of Corrections &amp; Community Supervision.  This will allow you to attend up to six times in a given year.  Fill out the <a href="http://www.doccs.ny.gov/directives/MFVS3080.pdf">Volunteer
 Registration Form (MFVS3080)</a>, parts I and II, and send it to the contact person listed above for the group you'd like to attend.</p>
