--- a/index.html
+++ b/index.html
@@ -21,15 +21,41 @@
 
       <p>The New York Yearly Meeting includes 8 worship groups and meetings within New York State Prisons.  These meetings bring incarcerated men and women together with attenders from across the state in the spirit of fellowship and community.</p>
 
-      <p>Meetings take place once or twice a week, and generally include both silent worship and discussions of social and personal matters.  Many groups also undertake projects: writing minutes or articles, planning quarterly meetings, writing and sharing poetry, raps, and essays.  We support each other through personal struggles, celebrate accomplishments like the awarding of academic degrees, and help each other build solid foundations for a successful transition from prison to civilian life.</p>
+      <p>Meetings take place once or twice a week, and generally include both silent worship and discussions of social and personal matters.  Many groups also undertake projects: writing minutes or articles, planning quarterly meetings, writing and sharing poetry, raps, and essays.  We support each other through personal struggles, celebrate accomplishments like the awarding of academic degrees, and help our incarcerated members build solid foundations for a successful transition from prison to civilian life.</p>
 
-      <p>We are looking for new regular attenders at our meetings, but we welcome those who would like to attend even once.  You do not have to personally identify as a Quaker to join us.</p>
+      <p><strong>We are looking for new regular attenders at our meetings, but we welcome those who would like to attend even once.</strong>  You do not have to personally identify as a Quaker to join us.</p>
 
-      <p>Information on individual worship groups and how to attend can be found below.  For questions on groups not found below, or any more general questions, please email quakersinside@googlegroups.com.</p>
+      <p>Information on individual worship groups and <a href="#volunteering">how to attend</a> can be found below.  For questions on groups not found below, or any more general questions, please email quakersinside@googlegroups.com.</p>
 
       <div class="scotch-rule"></div>
 
-      <h3>Sing Sing Worship Group</h3>
+      <h3>Why We Attend</h3>
+
+      <figure class="quote">
+        <blockquote>[I started attending the worship group at Attica] in 1982, and I'm still going to Quaker service, although I'm outside. I've been out since 2008.  One of the things that helped propel me through that journey was those outside volunteers.  You know, they gave me hope, they gave me a base to operate from, they gave me a sense of worth, a sense that someone cared about me... It was very, very helpful to be with them... I really enjoyed being with the Quakers, they gave me the fulfillment that one needs under those type of circumstances.</blockquote>
+        <figcaption>Carl Dukes, formerly incarcerated member of Attica Worship Group</figcaption>
+      </figure>
+
+      <p class="read-more" data-target="more-testimonies">Read more...</p>
+
+      <div id="more-testimonies" class="hidden">
+        <figure class="quote">
+          <blockquote>I find that it's been an important experience in my life for a couple of reasons:
+          sometimes at Otisville is where I most palpably feel or have an experience of the divine...
+          I always come away from there feeling that it was worth my while to have gone...I always felt like I got something out of it, and I always come back feeling grateful for simple things.</blockquote>
+          <figcaption>Ruth Matthews, attender at <a href="#otisville">Otisville Worship Group</a></figcaption>
+        </figure>
+
+        <figure class="quote">
+          <blockquote>One of the reasons I appreciated about the Quakers was because they didn't specify that you had to be any type of religion.  You could just come, quiet worship, get your thoughts together, do what you needed to do, and go... The Quaker group gave me everything I needed to help me: encourage me with education -- I got a couple degrees while I was inside, I learned the American Sign Language while I was inside -- and I'm just glad to be here.</blockquote>
+          <figcaption>Len McMrae, formerly incarcerated member of <a href="#otisville">Otisville Worship Group</a></figcaption>
+        </figure>
+
+      </div>
+
+      <div class="scotch-rule"></div>
+
+      <h3 id="sing-sing">Sing Sing Worship Group</h3>
 
       <ul class="schedule">
         <li>Meeting for Worship, Sundays, 8:15am to 11am</li>
@@ -41,7 +67,7 @@
         <figcaption>Norma Ellis, member of Scarsdale Meeting, attender at Sing Sing Worship Group</figcaption>
       </figure>
 
-      <p>The Sing Sing Worship Group was formed in 19XX.  Ten to fifteen attenders gather togther most Thursdays and Sundays for silent worship, discussion, and project planning.  Some of the men have been members of the group for years; some will be visiting for the first time at a friend's urging.  New visitors from the prison or civilian population are always welcomed in warmly.</p>
+      <p>The Sing Sing Worship Group was formed in TKTK.  Ten to fifteen attenders gather togther most Thursdays and Sundays for silent worship, discussion, and project planning.  Some of the men have been members of the group for years; some will be visiting for the first time at a friend's urging.  New visitors from the prison or civilian population are always welcomed in warmly.</p>
 
       <p>Our discussions range over many topics, but frequently concern spiritual growth, what it is to be and become "a man", healing from past struggles and traumas, and bringing our hard-won insights and the best of ourselves back to our communities outside the prison walls.</p>
 
@@ -49,17 +75,17 @@
 
       <h4>How to Attend</h4>
 
-      <p>In addition to the standard NYS Department of Corrections requirements, those wishing to attend Sing Sing Worship Group will have to _____.  For more information, please contact <a href="mailto:mpscanlon@aol.com">Matt Scanlon</a>, a member of Scarsdale Meeting and long-time member of the group.</p>
+      <p>Attenders must apply for volunteer status according to the New York State Department of Corrections &amp; Community Supervision guidelines <a href="#volunteering">outlined below</a>. For more information, please contact <a href="mailto:mpscanlon@aol.com">Matt Scanlon</a>, a member of Scarsdale Meeting and long-time member of the group.</p>
 
       <div class="scotch-rule"></div>
 
-      <h3>Otisville Worship Group</h3>
+      <h3 id="otisville">Otisville Worship Group</h3>
 
       <p>SAME FORMAT AS ABOVE.</p>
 
       <div class="scotch-rule"></div>
 
-      <h3>Volunteering in New York State Prisons</h3>
+      <h3 id="volunteering">Volunteering in New York State Prisons</h3>
 
       <p>Getting approval from the New York State Department of Corrections &amp; Community Supervision to attend our meetings can take a month or more, but it's worth the time and effort.  If you have any concerns about the process outlined below, don't hestitate to contact us at quakersinside@googlegroups.com for more information.</p>
 
@@ -80,14 +106,14 @@ Registration Form (MFVS3080)</a>, parts I and II, and send it to the contact per
 
       <div class="scotch-rule"></div>
 
-      <h3>Quaker Prison Ministry</h3>
+      <h3>Quaker Prison Ministry<br/>and Criminal Justice Advocacy</h3>
 
-      <p>Since 1817, when Elizabeth Gurney Fry began tending to the women of London's Newgate Prison, Quakers have worked to improve living conditions for imprisoned people, to make penal codes more humane, and to abolish the death penalty. TK TK TK.</p>
+      <p>Since the Seventeenth Century, Quakers have worked to improve living conditions for imprisoned people, to make penal codes more humane, and to abolish the death penalty.</p>
 
-      <p>Lorem ipsum more history.</p>
+      <p>William Penn's "Great Experiment" of the 1680's reserved capital punishment for the crime of murder alone, and strove for the humane rehabilitation of prisoners, In 1817, Elizabeth Gurney Fry began the first Quaker prison ministy, tending to physical and spiritual needs of the women of London's Newgate Prison, and testifying before the House of Commons about the injustices and abuses she observed.  To this day, Quakers actively advocate for the rights of prisoners of conscience, abolition of solitary confinement, and the development of restorative justice programs.</p>
 
     </div>
 
-
+    <script type="text/javascript" src="/javascripts/main.js"></script>
   </body>
 </html>
