added links to the video and the friends journal minute

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="container">
 
       <h1>Quakers Inside</h1>
-      <h2>Quaker Worship Groups in New York State Prisons</h2>
+      <h2>Quaker Worship Groups<br/>in New York State Prisons</h2>
 
       <figure>
         <img src="images/singsing-jumbo.jpg" alt="">
@@ -26,6 +26,8 @@
       <p><strong>We are looking for new regular attenders at our meetings, but we welcome those who would like to attend even once.</strong>  You do not have to personally identify as a Quaker to join us.</p>
 
       <p>Information on individual worship groups and <a href="#volunteering">how to attend</a> can be found below.  For questions on groups not found below, or any more general questions, please email quakersinside@googlegroups.com.</p>
+
+      <p><a href="http://youtu.be/h6hrIxxCepQ">Watch our video</a> on worship groups inside the prisons.</p>
 
       <div class="scotch-rule"></div>
 
@@ -59,7 +61,7 @@
 
       <ul class="schedule">
         <li>Meeting for Worship, Sundays, 8:15am to 11am</li>
-        <li>Meeting with a Concern for Business, Thursdays, 6pm to 8pm</li>
+        <li>Meeting with a Concern for Business, Thursdays, 6:15pm to 8:15pm</li>
       </ul>
 
       <figure class="quote">
@@ -67,9 +69,11 @@
         <figcaption>Norma Ellis, member of Scarsdale Meeting, attender at Sing Sing Worship Group</figcaption>
       </figure>
 
-      <p>The Sing Sing Worship Group was formed in TKTK.  Ten to fifteen attenders gather togther most Thursdays and Sundays for silent worship, discussion, and project planning.  Some of the men have been members of the group for years; some will be visiting for the first time at a friend's urging.  New visitors from the prison or civilian population are always welcomed in warmly.</p>
+      <p>The Sing Sing Worship Group was formed in TKTK.  Ten to fifteen attenders gather togther most Thursdays and Sundays for silent worship, discussion, and project planning.  Some of the men have been members of the group for years; some will be visiting for the first time at a friend's urging.  New visitors from the prison or civilian population are always welcomed warmly.</p>
 
       <p>Our discussions range over many topics, but frequently concern spiritual growth, what it is to be and become "a man", healing from past struggles and traumas, and bringing our hard-won insights and the best of ourselves back to our communities outside the prison walls.</p>
+
+      <p>In 2015, the members of the Sing Sing Worship Group wrote a minute entitled <a href="https://www.friendsjournal.org/reducing-violence-from-within/">“How We Would Help Our Community Reduce Violence,”</a> which was published by the Friends Journal.</p>
 
       <p>Sing Sing Correctional Facility is a men's prison in Ossining, New York, 40 miles north of New York City.  Metro North's Hudson line serves Ossining Station, which is 1 mile from the prison.</p>
 
@@ -80,6 +84,10 @@
       <div class="scotch-rule"></div>
 
       <h3 id="otisville">Otisville Worship Group</h3>
+
+      <ul class="schedule">
+        <li>Meeting for Worship, Saturdays, 12:30pm</li>
+      </ul>
 
       <p>SAME FORMAT AS ABOVE.</p>
 
