--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
         <!--figcaption>Quakers Inside</figcaption-->
       </figure>
 
-      <p>The New York Yearly Meeting includes 8 worship groups and meetings within New York State Prisons.  These meetings bring incarcerated men and women together with attenders from across the state in the spirit of fellowship and community.</p>
+      <p>The New York Yearly Meeting includes 8 worship groups and meetings within New York State Prisons.  These meetings bring incarcerated men and women together with Friends from across the state in the spirit of fellowship and community.</p>
 
-      <p>Meetings take place once or twice a week, and generally include both silent worship and discussions of social and personal matters.  Many groups also undertake projects: writing minutes or articles, planning quarterly meetings, writing and sharing poetry, raps, and essays.  We support each other through personal struggles, celebrate accomplishments like the awarding of academic degrees, and help our incarcerated members build solid foundations for a successful transition from prison to civilian life.</p>
+      <p>Meetings take place once or twice a week, and generally include both silent worship and discussions.  Many groups also undertake projects: writing minutes, planning quarterly meetings, writing and sharing poetry, raps, and essays.  We support each other through personal struggles, celebrate accomplishments like the awarding of academic degrees, and help our incarcerated members build solid foundations for a successful transition from prison to civilian life.</p>
 
-      <p><strong>We are looking for new regular attenders at our meetings, but we welcome those who would like to attend even once.</strong>  You do not have to personally identify as a Quaker to join us.</p>
+      <p><strong>We are looking for new regular attenders at our meetings, but we welcome those who would like to attend even once.</strong></p>
 
       <p>Information on individual worship groups and <a href="#volunteering">how to attend</a> can be found below.  For questions on groups not found below, or any more general questions, please email quakersinside@googlegroups.com.</p>
 
@@ -64,12 +64,14 @@
         <li>Meeting with a Concern for Business, Thursdays, 6:15pm to 8:15pm</li>
       </ul>
 
+      <!--
       <figure class="quote">
         <blockquote>I'm very impressed with the quality of worship, the sharing.  I have friends on the inside.  And they will be my friends for a very long time.</blockquote>
         <figcaption>Norma Ellis, member of Scarsdale Meeting, attender at Sing Sing Worship Group</figcaption>
       </figure>
+      -->
 
-      <p>The Sing Sing Worship Group was formed in TKTK.  Ten to fifteen attenders gather togther most Thursdays and Sundays for silent worship, discussion, and project planning.  Some of the men have been members of the group for years; some will be visiting for the first time at a friend's urging.  New visitors from the prison or civilian population are always welcomed warmly.</p>
+      <p>The Sing Sing Worship Group was formed in 1987.  Ten to fifteen attenders gather together most Thursdays and Sundays for silent worship, discussion, and project planning.  Some of the men have been members of the group for years; some will be visiting for the first time at a friend's urging.  New visitors from the prison or civilian population are always welcomed warmly.</p>
 
       <p>Our discussions range over many topics, but frequently concern spiritual growth, what it is to be and become "a man", healing from past struggles and traumas, and bringing our hard-won insights and the best of ourselves back to our communities outside the prison walls.</p>
 
@@ -95,7 +97,7 @@
 
       <h3 id="volunteering">Volunteering in New York State Prisons</h3>
 
-      <p>Getting approval from the New York State Department of Corrections &amp; Community Supervision to attend our meetings can take a month or more, but it's worth the time and effort.  If you have any concerns about the process outlined below, don't hestitate to contact us at quakersinside@googlegroups.com for more information.</p>
+      <p>Getting approval from the New York State Department of Corrections &amp; Community Supervision to attend our meetings can take a number of months, but it's worth the time and effort.  If you have any concerns about the process outlined below, don't hestitate to contact us at quakersinside@googlegroups.com for more information.</p>
 
       <p>Under normal circumstance, the minimum age for a volunteer is 21.  Please note that volunteers are prohibited from corresponding, visiting (with the exception of during volunteer activities), or accepting telephone calls from inmates at any DOCCS facility unless they receive permission.</p>
 
